-Installing LinqKit. -Working with GetPage method for Reusable Module.

--- a/frontend/main/app/index.html
+++ b/frontend/main/app/index.html
@@ -85,6 +85,7 @@
     <!-- endbuild -->
     <script src="scripts/vendor/alertify.js"></script>
     <script src="scripts/services/CRUD_Factory.js"></script>
+    <script src="scripts/reusable/BaseControllers.js"></script>
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
