--- a/frontend/main/app/index.html
+++ b/frontend/main/app/index.html
@@ -14,6 +14,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.bootstrap.min.css" />
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 </head>
@@ -97,6 +98,8 @@
     <script src="scripts/services/authservice.js"></script>
     <script src="scripts/services/userservice.js"></script>
     <script src="scripts/controllers/cqalist.js"></script>
+    <script src="scripts/controllers/cqa.js"></script>
+    <script src="scripts/directives/selection.js"></script>
     <!-- endbuild -->
 </body>
 
