-CQALineLogic. -Filtering by parent CQALine. -Adding AttachmentsBox directive to CommonDirectives. -Working with CQADetail...

--- a/frontend/main/app/index.html
+++ b/frontend/main/app/index.html
@@ -87,6 +87,7 @@
     <script src="bower_components/sifter/sifter.js"></script>
     <script src="bower_components/microplugin/src/microplugin.js"></script>
     <script src="bower_components/selectize/dist/js/selectize.js"></script>
+    <script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="scripts/vendor/alertify.js"></script>
