-Attachments directive updated. -Working with CQALine...

--- a/frontend/main/app/index.html
+++ b/frontend/main/app/index.html
@@ -94,6 +94,7 @@
     <script src="scripts/services/CRUD_Factory.js"></script>
     <script src="scripts/services/CRUD_Services.js"></script>
     <script src="scripts/reusable/BaseControllers.js"></script>
+    <script src="scripts/reusable/commonDirectives.js"></script>
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
@@ -107,6 +108,7 @@
     <script src="scripts/controllers/cqa.js"></script>
     <script src="scripts/directives/ngselectize.js"></script>
     <script src="scripts/directives/cqadetail.js"></script>
+    <script src="scripts/directives/cqaline.js"></script>
     <!-- endbuild -->
 </body>
 
