--- a/frontend/main/app/index.html
+++ b/frontend/main/app/index.html
@@ -37,7 +37,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#!/">{{appName}}</a>
+                    <a class="navbar-brand" href="#!/">CQA System</a>
                     <div class="navbar-head navbar-brand" ng-activity-indicator style="padding-top: 8px;"></div>
                 </div>
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -113,7 +113,6 @@
     <script src="scripts/controllers/about.js"></script>
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/services/appconfig.js"></script>
-    <script src="scripts/controllers/signup.js"></script>
     <script src="scripts/services/authinterceptorservice.js"></script>
     <script src="scripts/services/authservice.js"></script>
     <script src="scripts/controllers/cqalist.js"></script>
