-Reading parts, filtering and search from FS.

--- a/frontend/main/app/index.html
+++ b/frontend/main/app/index.html
@@ -119,6 +119,7 @@
     <script src="scripts/controllers/cqa.js"></script>
     <script src="scripts/directives/cqadetail.js"></script>
     <script src="scripts/directives/cqaline.js"></script>
+    <script src="scripts/directives/parts.js"></script>
     <!-- endbuild -->
 </body>
 
