--- a/frontend/main/app/index.html
+++ b/frontend/main/app/index.html
@@ -46,6 +46,7 @@
                         <li class="dropdown">
                             <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> {{currentUser.Value}} <span class="caret"></span></a>
                             <ul class="dropdown-menu">
+                                <li><a ng-href="#!/emailAccount">Email Account</a></li>
                                 <li><a href="" ng-click="logOut()">Logout</a></li>
                             </ul>
                         </li>
@@ -106,6 +107,8 @@
     <script src="scripts/directives/cqadetail.js"></script>
     <script src="scripts/directives/cqaline.js"></script>
     <script src="scripts/directives/parts.js"></script>
+    <script src="scripts/directives/sendemail.js"></script>
+    <script src="scripts/controllers/emailaccount.js"></script>
     <!-- endbuild -->
 </body>
 
