--- a/frontend/main/app/index.html
+++ b/frontend/main/app/index.html
@@ -35,18 +35,18 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#!/">CQA System</a>
+                    <a class="navbar-brand" href="#!/">CAPSONIC Inventory System</a>
                     <div class="navbar-head navbar-brand" ng-activity-indicator style="padding-top: 8px;"></div>
                 </div>
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="#!/">Home</a></li>
-                        <li><a ng-href="#!/CQAList">CQA List</a></li>
-                        <li><a ng-href="#!/about">Catalogs</a></li>
+                        <!-- <li><a ng-href="#!/CQAList">CQA List</a></li> -->
+                        <!-- <li><a ng-href="#!/about">Catalogs</a></li> -->
                         <li class="dropdown">
                             <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> {{currentUser.Value}} <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a ng-href="#!/emailAccount">Email Account</a></li>
+                                <!-- <li><a ng-href="#!/emailAccount">Email Account</a></li> -->
                                 <li><a href="" ng-click="logOut()">Logout</a></li>
                             </ul>
                         </li>
@@ -101,11 +101,7 @@
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/services/appconfig.js"></script>
     <script src="scripts/services/authinterceptorservice.js"></script>
-    <script src="scripts/services/authservice.js"></script>
-    <script src="scripts/controllers/cqalist.js"></script>
-    <script src="scripts/controllers/cqa.js"></script>
-    <script src="scripts/directives/cqadetail.js"></script>
-    <script src="scripts/directives/cqaline.js"></script>
+    <script src="scripts/services/authservice.js"></script>    
     <script src="scripts/directives/parts.js"></script>
     <script src="scripts/directives/sendemail.js"></script>
     <script src="scripts/controllers/emailaccount.js"></script>
