Travelers Aplication Setup Backend & Frontend

--- a/frontend/main/app/index.html
+++ b/frontend/main/app/index.html
@@ -35,13 +35,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#!/">CAPSONIC Inventory System</a>
+                    <a class="navbar-brand" href="#!/">CAPSONIC Traveler Log</a>
                     <div class="navbar-head navbar-brand" ng-activity-indicator style="padding-top: 8px;"></div>
                 </div>
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="#!/">Home</a></li>
-                        <li><a ng-href="#!/enterCount">Enter Ticket Counts</a></li>
+                        <li><a ng-href="#!/enterCount">Enter Traveler Header</a></li>
                         <li class="dropdown">
                             <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> {{currentUser.Value}} <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -97,6 +97,8 @@
     <script src="scripts/controllers/emailaccount.js"></script>
     <script src="scripts/directives/ticket.js"></script>
     <script src="scripts/controllers/entercount.js"></script>
+    <script src="scripts/directives/travelerheader.js"></script>
+    <script src="scripts/controllers/entertraveler.js"></script>
     <!-- endbuild -->
 </body>
 
