--- a/frontend/main/app/index.html
+++ b/frontend/main/app/index.html
@@ -41,7 +41,7 @@
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="#!/">Home</a></li>
-                        <li><a ng-href="#!/enterCount">Enter Traveler Header</a></li>
+                        <li><a ng-href="#!/EnterTraveler">Enter Traveler Header</a></li>
                         <li class="dropdown">
                             <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"></span> {{currentUser.Value}} <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -87,7 +87,6 @@
     <script src="scripts/directives/ngselectize.js"></script>
     <script src="scripts/directives/commonDirectives.js"></script>
     <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/about.js"></script>
     <script src="scripts/controllers/login.js"></script>
     <script src="scripts/services/appconfig.js"></script>
     <script src="scripts/services/authinterceptorservice.js"></script>
@@ -95,8 +94,6 @@
     <script src="scripts/directives/parts.js"></script>
     <script src="scripts/directives/sendemail.js"></script>
     <script src="scripts/controllers/emailaccount.js"></script>
-    <script src="scripts/directives/ticket.js"></script>
-    <script src="scripts/controllers/entercount.js"></script>
     <script src="scripts/directives/travelerheader.js"></script>
     <script src="scripts/controllers/entertraveler.js"></script>
     <!-- endbuild -->
