traveler header directive

--- a/frontend/main/app/index.html
+++ b/frontend/main/app/index.html
@@ -96,6 +96,7 @@
     <script src="scripts/controllers/emailaccount.js"></script>
     <script src="scripts/directives/travelerheader.js"></script>
     <script src="scripts/controllers/entertraveler.js"></script>
+    <script src="scripts/directives/travelerheaderro.js"></script>
     <!-- endbuild -->
 </body>
 
